--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -8,8 +8,10 @@
     <img style="border-radius: 100%; margin: 10px;" width="55px" height="55px" src="assets/img/Logo1.jpg" alt="">
     <span>Ecosolucions O&P</span>
     <span class="example-spacer"></span>
-    <button mat-button>Home</button>
-  
+    <button mat-button>Inicio</button>
+
+    <button mat-button [routerLink]="'/login'"> Iniciar sesión</button>
+
     
 </mat-toolbar>
 
