--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -21,7 +21,7 @@
                      
                           <input matInput type="text" placeholder="Email usuario" formControlName="email" />
                          <mat-error *ngIf="errorHandling('email', 'required')">
-                            Email es <strong>requerido</strong>
+                            Correo es <strong>requerido</strong>
                           </mat-error>
                           <mat-error *ngIf="errorHandling('email','email')">
                             Verifique el <strong>formato</strong> del email
