--- a/src/app/orden/index-orden/index-orden.component.css
+++ b/src/app/orden/index-orden/index-orden.component.css
@@ -15,6 +15,11 @@
 }
 
 
+#menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .custom-button {
   color: #ffffff;
